Fix collapsing thread not hiding the root comment

--- a/styles/hacker-news.pcss
+++ b/styles/hacker-news.pcss
@@ -10,16 +10,24 @@
   margin: 0 auto;
 }
 
-.chrome-customizations-extension-controls {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-  padding: 0 10px;
-  max-width: 15em;
-  background-color: rgba(255, 255, 255, 0.9);
+.chrome-customizations-extension {
+  &-controls {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    padding: 0 10px;
+    max-width: 15em;
+    background-color: rgba(255, 255, 255, 0.9);
 
-  input[type="range"] {
-    width: 100%;
+    input[type="range"] {
+      width: 100%;
+    }
+  }
+
+  &-comment {
+    &--hidden {
+      display: none;
+    }
   }
 }
 
